@@ -1,5 +1,7 @@
 package org.anjocaido.groupmanager.events;
 
+import org.bukkit.event.HandlerList;
+
 
 /**
  * @author ElgarL
@@ -11,6 +13,19 @@ public class GMSystemEvent extends GroupManagerEvent {
 	 * 
 	 */
 	private static final long serialVersionUID = -8786811924448821548L;
+	private static final HandlerList handlers = new HandlerList();
+
+	@Override
+	public HandlerList getHandlers() {
+        return handlers;
+    }
+ 
+    public static HandlerList getHandlerList() {
+        return handlers;
+    }
+
+    //////////////////////////////
+    
 	protected Action action;
     
     public GMSystemEvent(Action action) {
